[package]
name = "tonic-uds"
version = "0.1.0"
authors = ["Linus Färnstrand <linus@mullvad.net>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.5"
bytes = "0.4"
prost = "0.8"

tokio = { version = "1.8", features = ["rt-multi-thread", "time", "fs", "macros"] }
tokio-stream = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.3"
http = "0.2"
tower = "0.4"

triggered = "0.1.1"

prost-types = "0.8"

parity-tokio-ipc = "0.9"

[build-dependencies]
tonic-build = "0.5"
